syntax = "proto3";
package ctrl.v1;

option go_package = "github.com/unkeyed/unkey/gen/proto/ctrl/v1;ctrlv1";

service BuildService {
  rpc CreateBuild(CreateBuildRequest) returns (CreateBuildResponse) {}
  rpc GenerateUploadURL(GenerateUploadURLRequest) returns (GenerateUploadURLResponse) {}
}

message CreateBuildRequest {
  string build_context_path = 1; // S3 key of the uploaded tar file
  optional string dockerfile_path = 2; // Path to Dockerfile within the tar
  string unkey_project_id = 3; // Your internal user/project ID
  string deployment_id = 4;
  string workspace_id = 5;
}

message CreateBuildResponse {
  string image_name = 1; // Full image tag (registry.depot.dev/project:tag)
  string build_id = 2; // Depot build ID for tracking
  string depot_project_id = 3; // Depot project ID
}

message GenerateUploadURLRequest {
  string unkey_project_id = 1; // Your internal user/project ID
}

message GenerateUploadURLResponse {
  string upload_url = 1; // Presigned PUT URL
  string build_context_path = 2; // S3 key to use in CreateBuild
  int64 expires_in = 3; // Seconds until URL expires
}
